applications/apicurio-registry/probe-application/probe-application-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: probe-application
  # TODO add the annotation as an overlay patch
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    app: probe-application
    template: probe-application-registry
spec:
  to:
    kind: Service
    name: probe-application-registry
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
